--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,14 @@
       {
         "button-name": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-overflow-scrolling"
+        ]
+      }
     ]
   }
 }
