--- a/package.json
+++ b/package.json
@@ -170,5 +170,14 @@
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1"
   },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lamartine587/lgcms.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Lamartine587/lgcms/issues"
+  },
+  "homepage": "https://github.com/Lamartine587/lgcms#readme",
   "description": ""
 }
